--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical">
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="26dp"
@@ -20,14 +21,16 @@
             android:textColor="@color/text_color"
             android:textSize="@dimen/button_text_size" />
     </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="17dp"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="28dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="28dp"
         android:orientation="vertical">
+
         <Button
             android:id="@+id/button_find"
             android:layout_width="match_parent"
@@ -35,17 +38,18 @@
             android:layout_weight="1"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/ys_display_bold"
+            android:foreground="?attr/selectableItemBackground"
             android:letterSpacing="0"
             android:text="@string/find_name"
             android:textAllCaps="false"
             android:textColor="@color/btn_text_color"
             android:textSize="@dimen/button_text_size"
-            app:icon="@drawable/_26690_magnify_search_zoom_icon"
+            app:cornerRadius="@dimen/corner_radius"
+            app:icon="@drawable/search_light_mode"
             app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/btn_text_color"
-            android:foreground="?attr/selectableItemBackground"
-            app:cornerRadius="@dimen/corner_radius"/>
+            app:iconPadding="@dimen/setting_icon_text"
+            app:iconTint="@color/btn_text_color" />
+
         <Button
             android:id="@+id/button_media"
             android:layout_width="match_parent"
@@ -53,17 +57,18 @@
             android:layout_weight="1"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/ys_display_bold"
+            android:foreground="?attr/selectableItemBackground"
             android:letterSpacing="0"
             android:text="@string/media_name"
             android:textAllCaps="false"
             android:textColor="@color/btn_text_color"
             android:textSize="@dimen/button_text_size"
             app:cornerRadius="@dimen/corner_radius"
-            app:icon="@drawable/_669472_music_library_ic_icon"
+            app:icon="@drawable/media_light_mode"
             app:iconGravity="textStart"
-            app:iconPadding="10dp"
-            app:iconTint="@color/btn_text_color"
-            android:foreground="?attr/selectableItemBackground"/>
+            app:iconPadding="@dimen/setting_icon_text"
+            app:iconTint="@color/btn_text_color" />
+
         <Button
             android:id="@+id/button_tuning"
             android:layout_width="match_parent"
@@ -78,9 +83,9 @@
             android:textColor="@color/btn_text_color"
             android:textSize="@dimen/button_text_size"
             app:cornerRadius="@dimen/corner_radius"
-            app:icon="@drawable/_26699_settings_icon"
+            app:icon="@drawable/setting_vector"
             app:iconGravity="textStart"
-            app:iconPadding="10.66dp"
+            app:iconPadding="@dimen/setting_icon_text"
             app:iconTint="@color/btn_text_color" />
 
     </LinearLayout>
