--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="btn_text_color">#1A1B22</color>
     <color name="text_color">#FFFFFF</color>
     <color name="text_settings_color">#1A1B22</color>
+    <color name="icon_color">#AEAFB4</color>
 </resources>
