--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="setting_txt_bottom">21dp</dimen>
     <dimen name="setting_txt_start">16dp</dimen>
     <dimen name="setting_txt_end">44dp</dimen>
+    <dimen name="setting_icon_text">8dp</dimen>
+    <dimen name="icon_margin_top">19dp</dimen>
+    <dimen name="icon_margin_bottom">18dp</dimen>
 </resources>
