--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="26dp"
+            android:layout_height="match_parent"
             android:layout_gravity="top"
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
