--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -46,80 +46,55 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
+
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
 
         <TextView
             android:id="@+id/dark_mode_switch"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
             android:text="@string/dark_mode"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle" />
 
 
-        <ImageView
-            android:id="@+id/button_dark_mode_switch"
+        <androidx.appcompat.widget.SwitchCompat
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/setting_icon_text"
-            android:src="@drawable/icon_switch_off" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
         <TextView
             android:id="@+id/app_share"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
             android:text="@string/app_share"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle"/>
 
         <ImageView
             android:id="@+id/button_share_app"
+            android:src="@drawable/icon_share_app"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/setting_icon_text"
-            android:src="@drawable/icon_share_app" />
+             />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
         <TextView
             android:id="@+id/support_apply"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
             android:text="@string/support_apply"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle"/>
+
 
         <ImageView
             android:id="@+id/button_support"
@@ -134,30 +109,24 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
         <TextView
             android:id="@+id/user_agreement"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
             android:text="@string/user_agreement"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle"/>
+
 
         <ImageView
             android:id="@+id/button_user_agreement"
+            android:src="@drawable/icon_arrow_forward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/setting_icon_text"
-            android:src="@drawable/icon_arrow_forward" />
+             />
 
 
     </LinearLayout>
