--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="text_color">#FFFFFF</color>
     <color name="text_settings_color">#1A1B22</color>
     <color name="icon_color">#AEAFB4</color>
+    <color name="color_switch_knob_light">#AEAFB4</color>
+    <color name="color_switch_track_light">#E6E8EB</color>
+    <color name="color_switch_night">#3772E7</color>
+
 </resources>
