--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyMediaPlayer" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+    <style name="Theme.MyMediaPlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="MainScreen" parent="Theme.MyMediaPlayer">
+        <item name="android:background">@color/background</item>
+    </style>
+
+    <style name="SettingScreen" parent="Theme.MyMediaPlayer">
+        <item name="drawableTint">@color/text_settings_color</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="trackTint">@color/color_switch_track_light</item>
+        <item name="thumbTint">@color/color_switch_knob_light</item>
+        <item name="iconTint">@color/color_switch_knob_light</item>
+
+
+    </style>
+
 </resources>
