--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,30 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/SettingScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:theme="@style/SettingScreen"
         tools:ignore="ExtraText">
 
         <Button
             android:id="@+id/button_arrow_back"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="48dp"
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
-            android:backgroundTint="@color/white"
             android:scaleType="center"
-            android:src="@drawable/arrow_back"
             app:icon="@drawable/arrow_back"
             app:iconGravity="textStart"
             app:iconPadding="10dp"
-            app:iconTint="@color/btn_text_color"
             tools:ignore="SpeakableTextPresentCheck" />
+
 
         <TextView
             android:layout_width="208dp"
@@ -38,7 +37,6 @@
             android:paddingStart="12dp"
             android:paddingTop="14dp"
             android:text="@string/settings"
-            android:textColor="@color/text_settings_color"
             android:textSize="@dimen/button_text_size" />
 
 
@@ -46,53 +44,34 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
+
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
 
         <TextView
             android:id="@+id/dark_mode_switch"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
-            android:text="@string/dark_mode"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle"
+            android:text="@string/dark_mode" />
 
 
-        <ImageView
-            android:id="@+id/button_dark_mode_switch"
+        <androidx.appcompat.widget.SwitchCompat
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/setting_icon_text"
-            android:src="@drawable/icon_switch_off" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
         <TextView
             android:id="@+id/app_share"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
-            android:text="@string/app_share"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle"
+            android:text="@string/app_share" />
 
         <ImageView
             android:id="@+id/button_share_app"
@@ -104,22 +83,15 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
         <TextView
             android:id="@+id/support_apply"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
-            android:text="@string/support_apply"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle"
+            android:text="@string/support_apply" />
+
 
         <ImageView
             android:id="@+id/button_support"
@@ -134,22 +106,15 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        style="@style/LinearLayoutStyleSetting"
         android:paddingHorizontal="@dimen/setting_txt_start"
         android:paddingVertical="@dimen/setting_txt_top">
 
         <TextView
             android:id="@+id/user_agreement"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:fontFamily="@font/ys_display_regular"
-            android:text="@string/user_agreement"
-            android:textColor="@color/text_settings_color"
-            android:textSize="@dimen/setting_text_size" />
+            style="@style/TextViewStyle"
+            android:text="@string/user_agreement" />
+
 
         <ImageView
             android:id="@+id/button_user_agreement"
