MyMediaPlayer Sprint9 homework (include Styles,SwitchCompat,DarkMode,Strings (en and ru), and Clicker on buttons: share_app,support and user_agreement)

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -26,7 +26,7 @@
         <item name="colorControlActivated">@color/color_switch_night</item>
         <item name="trackTint">@color/color_switch_night</item>
         <item name="thumbTint">@color/color_switch_night</item>
-        <item name="iconTint">?attr/colorOnPrimary</item>
+        <item name="android:tint">?attr/colorOnPrimary</item>
 
 
     </style>
