MyMediaPlayer Sprint9 homework (include Styles,SwitchCompat,DarkMode,Strings (en and ru), and Clicker on buttons: share_app,support and user_agreement),change SearchActivity (EditText and TextWatcher)

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -51,6 +51,7 @@
 
         <EditText
             android:id="@+id/inputTextSearch"
+            style= "@style/MyEditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_weight="1"
@@ -73,9 +74,7 @@
             android:drawableStart="@drawable/icon_clear"
             android:paddingStart="14dp"
             android:visibility="gone" />
-        <!---
-        android:visibility="gone"
-        -->
+
 
 
     </LinearLayout>
