--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_gravity="top"
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
-            android:fontFamily="@font/ys_display_regular"
+            android:fontFamily="@font/ys_display_medium"
             android:text="@string/title"
             android:textColor="@color/text_color"
             android:textSize="@dimen/button_text_size" />
@@ -31,15 +31,13 @@
         android:layout_marginBottom="28dp"
         android:orientation="vertical">
 
+
         <Button
             android:id="@+id/button_find"
             style="@style/ButtonStyle"
             android:layout_weight="1"
             android:text="@string/find_name"
-            app:icon="@drawable/search_light_mode"
-
-            />
-
+            app:icon="@drawable/search_light_mode" />
 
         <Button
             android:id="@+id/button_media"
