--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,12 +37,12 @@
     </style>
 
 
-    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
+    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
 
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">220dp</item>
         <item name="android:backgroundTint">@color/white</item>
-        <item name="android:fontFamily">@font/ys_display_bold</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:textAllCaps">false</item>
@@ -54,9 +54,36 @@
 
     </style>
 
+    <style name="BackButtonStyle" parent="android:Widget.Holo.Button.Borderless">
+
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:layout_marginLeft">16dp</item>
+
+    </style>
+
+    <style name="HeadingTextStyle">
+
+        <item name="android:layout_width">208dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
+
+    </style>
+
     <style name="MyEditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 
+    <style name="ClearButtonStyle" parent="android:Widget.Holo.Button.Borderless">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 
 </resources>
