--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,14 +19,12 @@
         <item name="android:background">@color/background</item>
     </style>
 
-    <style name="SettingScreen" parent="Theme.MyMediaPlayer">
+    <style name="SecondaryScreen" parent="Theme.MyMediaPlayer">
         <item name="drawableTint">@color/text_settings_color</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="trackTint">@color/color_switch_track_light</item>
         <item name="thumbTint">@color/color_switch_knob_light</item>
         <item name="iconTint">@color/color_switch_knob_light</item>
-
-
     </style>
 
 </resources>
