--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,21 +13,22 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+
     </style>
 
     <style name="MainScreen" parent="Theme.MyMediaPlayer">
         <item name="android:background">?attr/colorPrimary</item>
+        <item name="iconTint">@color/black</item>
     </style>
 
 
     <style name="SecondaryScreen" parent="Theme.MyMediaPlayer">
         <item name="drawableTint">@color/text_settings_color</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
-        <item name="android:background">@color/black</item>
         <item name="colorControlActivated">@color/color_switch_night</item>
         <item name="trackTint">@color/color_switch_night</item>
         <item name="thumbTint">@color/color_switch_night</item>
-        <item name="android:tint">?attr/colorOnPrimary</item>
 
     </style>
 
